<resources>
    <string name="app_name">What To Do Next?</string>
    <string name="delete">Delete</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
        ultrices mattis nunc vitae dignissim. Cras finibus libero vel pulvinar finibus.</string>
    <string name="continue_unregistered">I don\'t want to register</string>
    <string name="login_or_register">Login / Register</string>
    <string name="signup_btn">Sign up</string>
    <string name="login_btn">Login</string>
    <string name="get_password_link">Reset password</string>
    <string name="back">Back</string>
    <string name="new_password">New password</string>
    <string name="update_password">Update password</string>
    <string name="logout">Log out</string>
    <string name="email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="registration_password_hint">Password</string>
    <string name="or_text">OR</string>
    <string name="show_password">Show password</string>
    <string name="firebase_no_internet">Request failed: Check your internet connection</string>
    <string name="firebase_unusual_error">Something unusual went wrong: Contact developer
        toni1.heinonen@gmail.com</string>
    <string name="fields_empty">Please fill all the fields</string>
    <string name="login_success">Successfully logged in</string>
    <string name="login_failed">Login failed: Check email and password</string>
    <string name="login_invalid_user">Email has not been registered: Sign up instead</string>
    <string name="login_invalid_password">Email or password is incorrect</string>
    <string name="registration_success">Successfully registered</string>
    <string name="registration_weak_password">Password is too weak (min 6 characters)</string>
    <string name="registration_user_collision">Email already exists</string>
    <string name="registration_invalid_credentials">Give valid email address</string>
    <string name="email_empty">Please enter email id</string>
    <string name="password_reset_success">Reset link sent to your email</string>
    <string name="password_reset_failed">Unable to send reset mail: Use valid email</string>
    <string name="menu_vote">Vote</string>
    <string name="menu_lists">Lists</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_results">Results</string>
    <string name="voting">Voting</string>
    <string name="local">Local</string>
    <string name="online">Online</string>
    <string name="select_list">Select List</string>
    <string name="select_voters">Select Voters</string>
    <string name="new_profile">New Profile</string>
    <string name="start_vote">Start</string>
    <string name="alert_no_lists_title">No lists found!</string>
    <string name="alert_no_lists_message">Create a new list before voting.</string>
    <string name="alert_no_lists_move">Create a list</string>
    <string name="alert_no_lists_back">Go back</string>
    <string name="toast_profile_empty">New profile name is empty!</string>
    <string name="toast_cant_delete_selected">Selected profiles can\'t be deleted!</string>
    <string name="toast_selected_profiles_empty">You need to select at least 1 profile!</string>
    <string name="toast_not_enough_activities">Selected list does not have enough activities!
        (%1$d required)</string>
    <string name="no_internet">You need to be connected to the internet in order to vote online!</string>
    <string name="long_loading_time">Check your internet connection!</string>
    <string name="unregistered_hosting">You need to be registered in order to host vote rooms!</string>
    <string name="unregistered_lists_locked">Lists are locked for unregistered users!</string>
    <string name="online_detail">Online Detail</string>
    <string name="online_nickname">Nickname</string>
    <string name="online_room_code">Room Code</string>
    <string name="online_host">Host</string>
    <string name="online_join">Join</string>
    <string name="start_vote_expiration_note">Note: Vote rooms are automatically removed after 4
        hours</string>
    <string name="online_no_lists">You have not made any lists, you need at least 1 list for
        voting!</string>
    <string name="online_toast_not_enough_activities">Unable to host, selected list does not have
        enough activities!(%1$s required)</string>
    <string name="online_host_duplicate">Room code already taken!</string>
    <string name="room_code_empty">Room code needs to have %1$d letters!</string>
    <string name="nickname_empty">Nickname can\'t be empty!</string>
    <string name="room_not_found">Room not found! Please check your provided room code.</string>
    <string name="vote_already_started">Vote already started!</string>
    <string name="online_vote_solo">You can\'t vote online alone. Start a local vote instead!</string>
    <string name="host_disconnected">Host disconnected from the vote room!</string>
    <string name="host_update_required">Version mismatch: Host needs to update the app if you want
        to join the vote room!</string>
    <string name="joiner_update_required">Version mismatch: You need to update the app in order to
        join the vote room!</string>
    <string name="reconnect_failed">Unable to reconnect: Something went fatally wrong!</string>
    <string name="lobby_room_code">Room Code</string>
    <string name="lobby_users">Users</string>
    <string name="lobby_start">Start</string>
    <string name="exit">Exit</string>
    <string name="waiting_for_host_lobby">Waiting for host to start…</string>
    <string name="host_allowed_start">Only the room host can start the vote!</string>
    <string name="vote_room_expired">Vote room has expired, exiting the vote…</string>
    <string name="waiting_for_host">Waiting for host to start voting…</string>
    <string name="waiting_for_users">Waiting for all users to load results…</string>
    <string name="voting_success">Voting successful</string>
    <string name="waiting_for">Waiting for users</string>
    <string name="profile_left_room">User \'%1$s\' left the room</string>
    <string name="alert_exit_title">Exit</string>
    <string name="alert_exit_message">Are you sure you want to exit?</string>
    <string name="alert_exit_yes">Exit</string>
    <string name="alert_exit_no">Cancel</string>
    <string name="vote_next">Next</string>
    <string name="vote_exit">Exit</string>
    <string name="give_points_to">Give %1$d points to?</string>
    <string name="vote_ready">Tap %1$s to continue</string>
    <string name="results">Results</string>
    <string name="results_info">Select which activities you are going to do (optional):</string>
    <string name="results_name">Name</string>
    <string name="results_extra">Extra</string>
    <string name="results_total">Total</string>
    <string name="save_and_exit">Save and exit</string>
    <string name="save_successful">Points have been calculated and the result has been saved</string>
    <string name="unregistered_vote_ended">Thank you for using this app! I hope that this experience
    has made you want to register and leave a feedback to the Google Play Store!</string>
    <string name="resultsTopic">Results</string>
    <string name="noResults">You don\'t have any results saved yet.</string>
    <string name="resultList">List name: %1$s</string>
    <string name="resultVoters">Voters: %1$s</string>
    <string name="results_position">#</string>
    <string name="results_bonus">Bonus</string>
    <string name="results_peril">Peril</string>
    <string name="resultBack">Close</string>
    <string name="no_list_selected">No list selected</string>
    <string name="lists_add">Add</string>
    <string name="lists_list">List</string>
    <string name="lists_back">Back</string>
    <string name="lists_fallen">Fallen</string>
    <string name="first_select_list">First select list</string>
    <string name="hint_new_list">List name</string>
    <string name="list_rename_saved">List name saved</string>
    <string name="lists_name">Name</string>
    <string name="lists_total">Total</string>
    <string name="lists_bonus">Bonus</string>
    <string name="lists_peril">Peril</string>
    <string name="lists_voted">Voted</string>
    <string name="alert_delete_topic">Delete %1$s</string>
    <string name="alert_delete_message">Are you sure you want to delete? There is no going back.</string>
    <string name="alert_delete_confirm">Delete</string>
    <string name="alert_delete_cancel">Cancel</string>
    <string name="list_item_dialog_nameHint">Activity name</string>
    <string name="list_item_dialog_bonus">Bonus</string>
    <string name="list_item_dialog_peril">Peril</string>
    <string name="list_item_dialog_drop">Drop</string>
    <string name="list_item_dialog_return">Return</string>
    <string name="list_item_dialog_delete">Delete</string>
    <string name="list_item_dialog_confirm">Confirm</string>
    <string name="list_item_dialog_cancel">Cancel</string>
    <string name="open_list">Open</string>
    <string name="duplicate_list">Duplicate</string>
    <string name="copy_name"> -copy</string>
    <string name="settings">Settings</string>
    <string name="settings_voting">Voting</string>
    <string name="settings_other">Other</string>
    <string name="max_peril">Max Peril</string>
    <string name="vote_points">Vote Points</string>
    <string name="first_vote">First Vote</string>
    <string name="last_vote">Last Vote</string>
    <string name="halve_extra">Halve Extra</string>
    <string name="show_extra">Show Extra</string>
    <string name="show_votes">Show Votes</string>
    <string name="ignore_unselected">Ignore Unselected</string>
    <string name="reset_tutorial">Reset Tutorial</string>
    <string name="settings_patch_notes">Patch Notes</string>
    <string name="result_style">Result Style</string>
    <string name="max_peril_text">Adjust the threshold of how many peril points activity can receive
    before it drops out of the list to the fallen category. Activities will be dropped after voting.
    </string>
    <string name="vote_points_text">Adjust how many points will be given in the first and last
        vote.</string>
    <string name="ignore_unselected_text">Enabling this will ignore all the activities which no one
        voted when counting the vote points in the first vote.</string>
    <string name="halve_extra_text">All activities receive extra points when voting by the amount of
        bonus and peril points they have. Enabling this will halve the value of activity\'s extra
        points in the last vote. Value will be rounded upwards.</string>
    <string name="show_extra_text">All activities receive extra points when voting by the amount of
        bonus and peril points they have. Enabling this will show the amount of points each activity
        has when voting.</string>
    <string name="show_votes_text">Enabling this will show the individual points each activity
        received from every voter.</string>
    <string name="reset_tutorial_text">Resets the whole tutorial.</string>
    <string name="result_style_text">Determines the style in which the results are shown after
        voting.</string>
    <string name="result_style_note">Note: If you have performance issues, use horizontal style.</string>
    <string name="last_vote_same_as_first">Last Vote: Points has to be lower than in first vote!</string>
    <string name="first_vote_same_as_last">First vote: Points has to be higher than in last vote!</string>
    <string name="points_at_zero">Points has to be at least 1!</string>
    <string name="points_over_list_size">First Vote: Points has to be equal or less than selected
        list size!</string>
    <string name="list_settings_title">%1$s Settings</string>
    <string name="points_must_be_higher">%1$s: Points has to be higher than %2$d or equal!</string>
</resources>