<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_for_layouts"
        tools:context=".SettingsActivity"
        android:background="@drawable/custom_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/defaultTextColor"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"/>

            <ImageButton
                android:id="@+id/close"
                style="@style/closeButtonRelative"
                android:onClick="backSelected"/>

        </RelativeLayout>

        <RelativeLayout
            style="@style/GenericProgressBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:id="@+id/loadingPanel">

            <ProgressBar
                style="@style/GenericProgressIndicator"/>
        </RelativeLayout>

        <!-- Wrap inside Scroll View just in case -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            style="@style/scrollViewStyle">

            <LinearLayout
                android:id="@+id/settingsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/settingsSubtitles"
                    android:text="@string/settings_voting"/>

                <!-- VOTE POINTS AND MAX PERIL -->
                <LinearLayout style="@style/settingsButtonsLayout">

                    <Button
                        android:id="@+id/votePoints"
                        style="@style/settingsButtons"
                        android:text="@string/vote_points"/>

                    <Button
                        android:id="@+id/maxPeril"
                        style="@style/settingsButtons"
                        android:text="@string/max_peril"/>

                </LinearLayout>

                <!-- MAX PERIL AND IGNORE UNSELECTED -->
                <LinearLayout style="@style/settingsButtonsLayout">

                    <Button
                        android:id="@+id/showVotes"
                        style="@style/settingsButtons"
                        android:text="@string/show_votes"/>

                    <Button
                        android:id="@+id/ignoreUnselected"
                        style="@style/settingsButtons"
                        android:text="@string/ignore_unselected"/>

                </LinearLayout>

                <!-- HALVE EXTRA AND SHOW EXTRA -->
                <LinearLayout style="@style/settingsButtonsLayout">

                    <Button
                        android:id="@+id/showExtra"
                        style="@style/settingsButtons"
                        android:text="@string/show_extra"/>

                    <Button
                        android:id="@+id/halveExtra"
                        style="@style/settingsButtons"
                        android:text="@string/halve_extra"/>

                </LinearLayout>

                <TextView
                    style="@style/settingsSubtitles"
                    android:text="@string/settings_other"/>

                <!-- RESET TUTORIAL -->
                <LinearLayout style="@style/settingsButtonsLayout">

                    <Button
                        android:id="@+id/resetTutorial"
                        style="@style/settingsButtons"
                        android:text="@string/reset_tutorial"/>

                    <Button
                        android:id="@+id/patchNotes"
                        style="@style/settingsButtons"
                        android:text="@string/settings_patch_notes"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</RelativeLayout>