<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListsActivity"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <Button
            android:id="@+id/addButton"
            style="@style/listsButtons"
            android:text="@string/lists_add"/>

        <Button
            android:id="@+id/sortButton"
            style="@style/listsButtons"
            android:text="@string/lists_sort"/>

        <Button
            android:id="@+id/listButton"
            style="@style/listsButtons"
            android:text="@string/lists_list"/>

        <Button
            android:id="@+id/backButton"
            style="@style/listsButtons"
            android:text="@string/lists_back"/>


    </LinearLayout>



</LinearLayout>