<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/custom_bg">

        <TextView
            android:id="@+id/listName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/defaultTextColor"
            android:fontFamily="@font/small_caps_font"
            android:text="List name placeholder"/>

        <!-- BUTTONS -->
        <Button
            android:id="@+id/open"
            style="@style/listModifyButtons"
            android:text="@string/open_list"
            android:background="@drawable/confirm_button"/>

        <Button
            android:id="@+id/duplicate"
            style="@style/listModifyButtons"
            android:text="@string/duplicate_list"
            android:background="@drawable/drop_button"/>

        <Button
            android:id="@+id/delete"
            style="@style/listModifyButtons"
            android:text="@string/delete"
            android:background="@drawable/orange_button"/>

        <Button
            android:id="@+id/cancel"
            style="@style/listModifyButtons"
            android:text="@string/list_item_dialog_cancel"
            android:background="@drawable/cancel_button"/>
    </LinearLayout>
</RelativeLayout>