<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_bg">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_for_layouts"
        android:background="@drawable/custom_bg"
        tools:context=".voteactivity.VoteTopActivity">

        <RelativeLayout
            style="@style/GenericProgressBackground"
            android:id="@+id/loadingPanel">

            <ProgressBar
                style="@style/GenericProgressIndicator"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                style="@style/voteButtonsOnTop"
                android:text="@string/vote_exit"
                android:onClick="exitPressed"/>

            <Button
                android:id="@+id/nextButton"
                style="@style/voteButtonsOnTop"
                android:text="@string/vote_next"
                android:onClick="nextPressed"/>

        </LinearLayout>

        <TextView
            style="@style/voteTopic"
            android:text="@string/results"/>

        <TextView
            android:id="@+id/resultsInfoText"
            style="@style/voteInfo"
            android:text="@string/results_info"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/listHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical"/>

    </LinearLayout>
</LinearLayout>