<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:minHeight="500dp"
    android:background="#DDD"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <!-- LIST -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/select_list"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"/>

    </LinearLayout>

    <!-- VOTERS -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/select_voters"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/newProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:hint="@string/new_profile"
                android:textSize="25sp"
                android:maxLength="15"/>

            <Button
                android:id="@+id/addProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/lists_add"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="#0F0"/>

        </LinearLayout>

        <ListView
            android:id = "@+id/savedProfiles"
            android:layout_width = "match_parent"
            android:layout_height = "match_parent"
            android:divider="#000"
            android:dividerHeight="1dp"/>

    </LinearLayout>

    <!-- START & BACK -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:text="@string/lists_back"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="#F00"/>

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:text="@string/start_vote"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

</LinearLayout>