<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/horizontalScrollViewStyle"
    android:padding="@dimen/results_list_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/topicLayout"
            style="@style/resultsListAndItemLayout"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/vert_result_title_bg">

            <TextView
                style="@style/resultsTopicValues"
                android:layout_width="@dimen/results_show_votes_name_width"
                android:text="@string/results_name"/>

            <TextView
                style="@style/resultsTopicPoints"
                android:layout_width="@dimen/results_show_votes_points_width"
                android:text="@string/results_total" />

            <TextView
                style="@style/resultsTopicPoints"
                android:layout_width="@dimen/results_show_votes_points_width"
                android:text="@string/results_extra" />

        </LinearLayout>

        <ListView
            style="@style/listViewStyle"
            android:id = "@+id/resultItems"
            android:layout_width = "match_parent"
            android:layout_height = "match_parent"/>

    </LinearLayout>

</HorizontalScrollView>